--- a/cfgbkc/Cargo.toml
+++ b/cfgbkc/Cargo.toml
@@ -8,3 +8,12 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.2.7", features = ["derive"] }
 anyhow = "1.0.71"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
+log = "0.4.0"
+env_logger = "0.9.0"
+flate2 = "1.0"
+tar = "0.4"
+
+[build]
+jobs = 8
